--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "jpeg-mosher",
+  "name": "jpeg-mosher-cli",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
-  "license": "ISC",
+  "license": "The Unlicense",
   "description": "",
   "dependencies": {
-    "jimp": "^1.6.0"
+    "jimp": "^1.6.0",
+    "yargs": "^17.7.2"
   }
 }
