--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
   "name": "jpeg-mosher-cli",
   "version": "1.0.3",
-  "main": "index.js",
-  "type": "module",
-  "author": "",
+  "description": "moshing jpeg images",
   "license": "The Unlicense",
-  "description": "",
+  "author": "",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
     "test": "node index.js test.jpg"
   },
   "dependencies": {
-    "elliotisms": "^0.0.44",
+    "chalk": "^5.3.0",
+    "elliotisms": "^0.0.45",
     "jimp": "^1.6.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
+    "@eslint/js": "^9.12.0",
     "@release-it/bumper": "^6.0.1",
-    "@stylistic/eslint-plugin-js": "^1.7.2",
-    "eslint": "^9.0.0",
+    "@stylistic/eslint-plugin-js": "^2.9.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-no-secrets": "^1.0.2",
     "eslint-plugin-package-json": "^0.15.3",
-    "eslint-plugin-perfectionist": "^2.10.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-perfectionist": "^3.8.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "eslint-plugin-sonarjs": "^1.0.3",
-    "eslint-plugin-unicorn": "^53.0.0",
-    "prettier": "^3.2.5",
-    "release-it": "^17.3.0"
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-sonarjs": "^2.0.3",
+    "eslint-plugin-unicorn": "^56.0.0",
+    "prettier": "^3.3.3",
+    "release-it": "^17.7.0"
   }
 }
